Removed deprecated URL call.